--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "Proyek akhir dicoding, membuat API bookshelf",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/server.js",
-    "start:dev": "nodemon src/server.js",
+    "start:dev": "nodemon ./src/server.js",
     "lint": "eslint ./src/",
     "lint:fix": "eslint ./src/ --fix"
   },
@@ -23,6 +22,6 @@
   },
   "dependencies": {
     "@hapi/hapi": "^21.3.8",
-    "nanoid": "^5.0.7"
+    "nanoid": "^3.3.7"
   }
 }
